_sass/includes/_wizard.sass
@import 'variables'

.wizard-branding
	display: block
	width: 1040px

.wizard
	display: block
	width: 960px
	background-color: rgba(245,246,247,1)
	border-bottom: 3px solid #59697D

	h1
		.version
			color: #D2E0E5

	.wizard-main
		height: 500px
		.steps
			box-sizing: border-box
			width: 20%
			float: left
			height: 100%
			ul
				list-style-type: none
				margin-top: 15px
				padding-right: 10px
				.icon
					position: relative
					top: -2px
					color: #355460
				li 
					display: block
					font-size: 17px
					font-family: $DattoDIN
					color: #1fb6ff
					text-decoration: none
					padding: 18px 0
					.disabled
						color: #81949B
						cursor: not-allowed
					.active
						font-weight: bold
						color: #355460
						cursor: not-allowed
					&:first-child
						padding-top: 10px
		.step-content
			box-sizing: border-box
			width: 80%
			float: left
			height: 100%
			background-color: #fff
			border: 1px solid #D9DFE1
			border-radius: 4px

			.box
				border: 1px solid red
				padding: 10px
				box-sizing: border-box

			ul 
				list-style-type: none
				border: 1px solid #E5E9EB
				border-radius: 4px 
				li 
					width: 100%
					height: 50px
					line-height: 50px
					display: block
					border-bottom: 1px solid #E5E9EB
					&:last-child
						border-bottom: 0
					input
						position: relative
						top: 15px
					.radio-value
						font-family: $DattoDIN
						font-weight: bold
						font-size: 16px
						color: $midnight-80
					.radio-description
						color: $midnight-40
						font-style: italic
					.radio-tag
						position: relative
						top: 12px
						font-size: 12px
						font-weight: bold
						line-height: 13px
						padding: 5px
						margin-left: 10px
						display: inline-block
						float: left
						font-family: DattoDIN
						text-transform: uppercase
						background-color: #7AD02F
						color: #fff
						border-radius: 4px

	.action-bar
		width: 100%
		height: 70px
		.icon
			color: #fff
			top: 4px
			position: relative
	

